--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body{
 }
 #header{
     width:100%;
-    height:100vh;
-    background-image: url(images/background.png);
-    background-size:cover;
-    background-position:center;
+    height:115vh;
+    background-image: url(images/1723465036250.png);
+    background-size:70%;
+    background-position:right;
+    background-repeat: no-repeat;
 }
 .container{
  padding: 10px 10px;   
@@ -90,14 +91,14 @@ color: #ababab;
     flex-wrap: wrap;
 }
 .about-col-1{
-    flex-basis: 35%;
+    flex-basis: 30%;
 }
 .about-col-1 img{
-    width: 100%;
+    width: 90%;
     border-radius: 15px;
 }
 .about-col-2{
-    flex-basis: 60%;
+    flex-basis: 65%;
 }
 .sub-title{
     font-size:70px;
@@ -215,22 +216,24 @@ nav .fa-solid{
 @media only screen and (max-width:600px)
 {
 #header{
-    background-image: url(images/backgroundphn.png);
+    background-image: url(images/phn.png);
+    width:100%;
+    height:125vh;
+    background-size:120%;
+    background-position:right;
+    background-repeat: no-repeat;
 }
+
 .header-text{
     margin-left: 8px;
-margin-top: 60%;
+margin-top: 50%;
 font-size: 19px;
 }
-.header-text p{
-    margin-left: 2px;
-    font-weight: 500;
-}
-.header-text h1{margin-right: 160px;
+.header-text h1{margin-right: 140px;
     font-size: 25px;
 }
 .Hi{margin-right: 220px;
-    width: 18%;
+    width: 30%;
 }
 .logo{
     width:150px;
