--- a/style.css
+++ b/style.css
@@ -91,14 +91,15 @@ color: #ababab;
     flex-wrap: wrap;
 }
 .about-col-1{
-    flex-basis: 30%;
+    flex-basis: 35%;
 }
 .about-col-1 img{
-    width: 90%;
+    margin-left: 60px;
+    width: 80%;
     border-radius: 15px;
 }
 .about-col-2{
-    flex-basis: 65%;
+    flex-basis: 60%;
 }
 .sub-title{
     font-size:70px;
