--- a/style.css
+++ b/style.css
@@ -12,39 +12,31 @@ body{
     color: #fff; 
 }
 #header{
-    width:100%;
-    height:115vh;
-    background-image: url(images/1723465036250.png);
-    background-size:70%;
-    background-position:right;
-    background-repeat: no-repeat;
-}
-.container{
- padding: 10px 10px;   
-}
-
-nav{
-    display: flex;
-    align-items: center;
+    position:fixed;
+    top: 0%;
+    display:flex;
     justify-content: space-between;
-    flex-wrap:wrap;
+    margin-left: 50px;
+    background: #000000a5;
+    align-items: center;
+    width: 97%; 
+    margin-right: 10px; 
 }
 .logo{
-    width:350px;
-    margin-left: 70px;
-    margin-top: 20px;
+    width:250px;
+   
 }
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
+    margin-left:40px;
 }
 nav ul li a{
-    color: #fff;
-    text-decoration: none;
+    color:#afadad;
+    text-decoration:none;
     font-size: 18px;
     position: relative;
-
+    
 }
 nav ul li a::after{
     content: '';
@@ -63,19 +55,26 @@ nav ul li a:hover::after{
 .hi{
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 1rem;
 }
 .Hi{
-    width: 25%;
+    width: 75%;
 }
-.header-text{
+.header-text{display: flex;
+    justify-content: space-between;
     margin-left: 70px;
-    margin-top: 18%;
-    font-size: 40px;
+    margin-top: 8%;
+    
 }
 .header-text h1{
     font-size: 68px;
     margin-top: 20px;
+}
+.background-image{
+    width: 70%;
+}
+.phn-image{
+    display:none;
 }
 .header-text h1 span{
 color: #d80000;
@@ -149,10 +148,10 @@ color: #ababab;
     display:block;
 }
 /*---Contact-----*/
-.contact-left{
+.contact-left{margin-left: 1rem;
     flex-basis:35%
 }
-.contact-right{
+.contact-right{margin-right: 1rem;
     flex-basis: 60%;
 }
 .contact-left p{
@@ -204,7 +203,7 @@ form input,form textarea{
 }
 .copyright 
 {width: 100%;
-    padding: 25px 0;
+    padding: 25px;
     background: #262626;
     font-weight: 300;
     margin-top: 20px;
@@ -223,25 +222,29 @@ nav .fa-solid{
 }
 @media only screen and (max-width:600px)
 {
-#header{
-    background-image: url(images/phn.png);
-    width:100%;
-    height:125vh;
-    background-size:120%;
-    background-position:right;
-    background-repeat: no-repeat;
-}
+    #header{
+        position:fixed;
+        top: 0%;
+        display:flex;
+        justify-content: space-between;
+        margin-left: 10px;
+        background: #000000a5;
+        align-items: center;
+        width: 50%; 
+        margin-right: 10px; 
+    }
 
-.header-text{
+.header-text{flex-wrap: wrap;
     margin-left: 8px;
 margin-top: 50%;
 font-size: 19px;
+justify-items: top;
 }
 .header-text h1{margin-right: 140px;
     font-size: 25px;
 }
 .Hi{margin-right: 220px;
-    width: 40%;
+    width: 60%;
 }
 .logo{
     width:150px;
@@ -253,10 +256,16 @@ font-size: 19px;
     flex-direction: column;
     margin-left: 25px;
 }
-nav .fa-solid{
+nav .fa-xmark{
     display: block;
     font-size: 25px;
 }
+nav .fa-bars{
+    display: block;
+    font-size: 25px;
+    margin-left: 165px;
+}
+
 nav ul{
     background:#ff0000;
     position: fixed;
@@ -278,6 +287,13 @@ nav ul .fa-solid{
     left: 25px;
     cursor: pointer;
 }
+.background-image{
+    display: none;
+}
+.phn-image{margin-top:-83%;
+   width: 100%;
+    display: block;
+}
 .about-col-1{
     flex-basis: 94%;
     margin-bottom: 25px;
@@ -294,10 +310,11 @@ nav ul .fa-solid{
 .about-col-2{
     margin-left: 24px;
 }
-.contact-left{
+.contact-left{margin-left: 10px;
     flex-basis:100%
 }
-.contact-right{
+.contact-right{margin-left: 10px;
+    margin-right: 10px;
     flex-basis: 100%;
 }
 .contact-left p{
